--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -30,6 +30,10 @@ body {
     }
 }
 
+.modal {
+    .border-radius(0);
+}
+
 .popover {
     .border-radius(@baseBorderRadius) !important;
 }
@@ -60,6 +64,7 @@ body {
 
 @import "presentation.less";
 @import "transaction-form.less";
+@import "category-list.less";
 @import "settings.less";
 
 /*
