--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -10,13 +10,13 @@
         <div class="control-group">
             <label class="control-label" for="name">{% trans "Name" %}</label>
             <div class="controls">
-                <input type="text" name="name" ng-model="category.name">
+                <input type="text" name="name" ng-model="editing_category.name">
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="color">{% trans "Color" %}</label>
             <div class="controls">
-                <input type="text" name="color" ng-model="category.color">
+                <input type="text" name="color" ng-model="editing_category.color">
             </div>
         </div>
     </form>
@@ -24,5 +24,5 @@
 
 <div class="modal-footer">
     <button type="button" class="btn" ng-click="hide()">Close</button>
-    <button class="btn btn-primary" ng-click="">Save changes</button>
+    <button class="btn btn-primary" ng-click="saveCategory()">Save changes</button>
 </div>
