--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -23,6 +23,7 @@
 </div>
 
 <div class="modal-footer">
+    <a href="" ng-click="removeCategory(category)" style="float: left">{% trans "Remove category" %}</a>
     <button type="button" class="btn" ng-click="hide()">Close</button>
     <button class="btn btn-primary" ng-click="saveCategory()">Save changes</button>
 </div>
