--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="modal-footer">
-    <button ng-click="removeCategory(category)" class="btn btn-link" ex-confirmation-needed="{% trans "Do you wish to remove this category?"%}" style="float: left">{% trans "Remove category" %}</a>
+    <button ng-click="removeCategory(category)" class="remove-category btn btn-link" ex-confirmation-needed="{% trans "Do you wish to remove this category?"%}">{% trans "Remove category" %}</a>
     <button type="button" class="btn" ng-click="hide()">Close</button>
     <button class="btn btn-primary" ng-click="saveCategory()">Save changes</button>
 </div>
