--- a/templates/webapp/settings/category-list.html
+++ b/templates/webapp/settings/category-list.html
@@ -2,6 +2,7 @@
 
 <h4 class="panel-title">{% trans "Categories" %}</h4>
 
+<button class="btn" ng-click="createCategory()"><i class="icon-plus icon-large"></i> {% trans "New category" %}</button>
 <table class="category-table">
     <thead>
         <tr>
