--- a/templates/webapp/settings/category-list.html
+++ b/templates/webapp/settings/category-list.html
@@ -16,7 +16,7 @@
                 <span class="category-label" ng-style="{backgroundColor: category.color}">&nbsp;&nbsp;&nbsp;</span>
             </td>
 
-            <td ng-bind="category.name"></td>
+            <td ng-bind="category.name" width="99%"></td>
         </tr>
     </tbody>
 </table>
