--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -31,6 +31,6 @@
         
         {% trans "Remove category" %}</button>
 
-    <button type="button" class="btn" ng-click="hide()">Close</button>
-    <button class="btn btn-primary" ng-click="saveCategory()">Save changes</button>
+    <button type="button" class="btn" ng-click="hide()">{% trans "Cancel" %}</button>
+    <button class="btn btn-primary" ng-click="saveCategory()">{% trans "Save" %}</button>
 </div>
