--- a/templates/webapp/transaction-form.html
+++ b/templates/webapp/transaction-form.html
@@ -105,7 +105,11 @@
         </div>
     </fieldset>
 
-    <button ng-click="submit()" ng-disabled="sending">{% trans "Submit" %}<i ng-show="sending" class="icon-spinner icon-spin icon-large"></i></button>
+    <button ng-click="submit()" class="btn" ng-disabled="sending">
+    <i ng-show="sending" class="icon-spinner icon-spin icon-large"></i>
+    <i ng-hide="sending" class="icon-ok icon-large"></i>
+    {% trans "Submit" %}
+    </button>
 </form>
 
 
