--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -14,9 +14,9 @@
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="color">{% trans "Color" %}</label>
+            <label class="control-label" for="cor">{% trans "Color" %}</label>
             <div class="controls">
-                <input type="text" name="color" ng-model="editing_category.color">
+                <input type="text" name="cor" ng-model="editing_category.color" colorpicker>
             </div>
         </div>
     </form>
