--- a/templates/base.html
+++ b/templates/base.html
@@ -17,12 +17,11 @@
             user_categories = {{ user_categories|to_json }};
         </script>
 
-        <script src="{% static "js/jquery-1.10.1.min.js" %}"></script>
-        <script src="{% static "js/jquery.maskMoney.js" %}"></script>
-        <script src="{% static "js/bootstrap.min.js" %}"></script>
-        <script src="{% static "js/bootstrap-datepicker.js" %}"></script>
-        <script src="{% static "js/locales/bootstrap-datepicker.pt-BR.js" %}" type="text/javascript"></script>
-        <script src="{% static "js/spectrum.js" %}"></script>
+        {% comment %}
+        <script src="{% static "js/lib/min/jquery-1.10.1.min.js" %}"></script>
+        <script src="{% static "js/lib/min/bootstrap.min.js" %}"></script>
+        {% endcomment %}
+        <script src="{% static "js/script.js" %}"></script>
         <script src="{% url "django.views.i18n.javascript_catalog" %}" type="text/javascript"></script>
 
         {% block extrahead %}{% endblock extrahead %}
