--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -26,13 +26,27 @@
 {% endblock body %}
 
 {% block bodyend %}
+
+{% comment %}
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.js"></script>
-<script src="{% static "js/angular-ui-router.min.js" %}"></script>
-<script src="{% static "js/moment.min.js" %}"></script>
+{% endcomment %}
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.min.js"></script>
+
+<script src="{% static "js/webapp.js" %}"></script>
+
+{% comment %}
+<script src="{% static "js/lib/jquery.maskMoney.js" %}"></script>
+<script src="{% static "js/lib/bootstrap-datepicker.js" %}"></script>
+<script src="{% static "js/locales/bootstrap-datepicker.pt-BR.js" %}" type="text/javascript"></script>
+<script src="{% static "js/lib/spectrum.js" %}"></script>
+<script src="{% static "js/lib/min/angular-ui-router.min.js" %}"></script>
+<script src="{% static "js/lib/min/moment.min.js" %}"></script>
 <script src="{% static "js/locales/pt-br.js" %}"></script>
 <script src="{% static "js/locales/angular-locale_pt-br.js" %}"></script>
-<script src="{% static "js/angular-strap.min.js" %}"></script>
+<script src="{% static "js/lib/min/angular-strap.min.js" %}"></script>
 <script src="{% static "js/app.js" %}"></script>
 <script src="{% static "js/controllers/BalancePanelCtrl.js" %}"></script>
 <script src="{% static "js/controllers/RemindersCtrl.js" %}"></script>
@@ -43,5 +57,6 @@
 <script src="{% static "js/controllers/ReminderListCtrl.js" %}"></script>
 <script src="{% static "js/services.js" %}"></script>
 <script src="{% static "js/directives.js" %}"></script>
+{% endcomment %}
 {% endblock bodyend %}
 
