--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <script src="{% static "js/lib/min/jquery-1.10.1.min.js" %}"></script>
         <script src="{% static "js/lib/min/bootstrap.min.js" %}"></script>
         {% endcomment %}
-        <script src="{% static "js/script.js" %}"></script>
+        <script src="{% static "js/script.min.js" %}"></script>
         <script src="{% url "django.views.i18n.javascript_catalog" %}" type="text/javascript"></script>
 
         {% block extrahead %}{% endblock extrahead %}
