--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -35,7 +35,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.min.js"></script>
 
-<script src="{% static "js/webapp.js" %}"></script>
+<script src="{% static "js/webapp.min.js" %}"></script>
 
 {% comment %}
 <script src="{% static "js/lib/jquery.maskMoney.js" %}"></script>
