--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
+{% load template_additions %}
+{% smart_spaceless %}
+
 {% load staticfiles %}
 {% load expenses_tags %}
-
-{% spaceless %}
 
 <!DOCTYPE html>
 <html>
@@ -54,4 +55,4 @@
     </body>
 </html>
 
-{% endspaceless %}
+{% end_smart_spaceless %}
