fixing confirmation-needed

--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -26,7 +26,7 @@
     <button
         ng-click="removeCategory(category)"
         ng-show="editing_category.id"
-        ex-confirmation-needed="{% trans "Do you wish to remove this category?"%}"
+        confirmation-needed="{% trans "Do you wish to remove this category?"%}"
         class="remove-category btn btn-link">
         
         {% trans "Remove category" %}</button>
