--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -1,6 +1,6 @@
-@import "bootstrap/bootstrap.less";
-@import "bootstrap/responsive.less";
-@import "datepicker.less";
+@import "lib/bootstrap/bootstrap.less";
+@import "lib/bootstrap/responsive.less";
+@import "lib/datepicker.less";
 @import "variables.less";
 
 /*
