--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8793,4 +8793,12 @@ span.category-label-inverse[href] {
   -moz-border-radius: 1px !important;
   -webkit-border-radius: 1px !important;
   border-radius: 1px !important;
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+#toast-container > :hover {
+  -moz-box-shadow: 0 0 12px #999999 !important;
+  -webkit-box-shadow: 0 0 12px #999999 !important;
+  box-shadow: 0 0 12px #999999 !important;
 }
