bringing password reset templates to webapp

--- a/templates/password_reset/base.html
+++ b/templates/password_reset/base.html
@@ -2,6 +2,7 @@
 
 {% block body %}
     <div class="container center-form">
+    <h3>{% block title %}{% endblock title %}</h3>
     {% block content %}
     {% endblock content %}
     </div> <!-- container -->
