embedding commonly used templates on it's parent pages

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -28,6 +28,14 @@
     </div>
     <div class="row" ui-view>
     </div>
+
+    <script type="text/ng-template" id="transaction-list.html">
+    {% include "webapp/transaction-list.html" %}
+    </script>
+
+    <script type="text/ng-template" id="settings.html">
+    {% include "webapp/settings/settings.html" %}
+    </script>
 </div>
 
 {% endblock body %}
