--- a/templates/webapp/settings/category-list.html
+++ b/templates/webapp/settings/category-list.html
@@ -24,3 +24,7 @@
 <div id="empty-msg" ng-hide="categories.length"> 
     {% trans "No categories." %}
 </div>
+
+<script type="text/ng-template" id="category-edit.html">
+{% include "webapp/settings/category-edit.html" %}
+</script>
