--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -109,6 +109,22 @@ body {
     }
 }
 
+
+i.input-icon {
+    position: relative;
+
+    &:before {
+        position: absolute;
+        left: 10px;
+        top: 0px;
+    }
+
+    + input {
+        text-indent: 23px;
+    }
+}
+
+
 .center-form {
     width: 300px;
     margin: 0 auto;
