--- a/templates/access/forms/login_inline.html
+++ b/templates/access/forms/login_inline.html
@@ -1,13 +1,16 @@
 {% load i18n %}
 
 <form id="login-inline" class="navbar-form form-inline pull-right" action="{% url "login" %}" method="POST">{% csrf_token %}
-    <div class="input-prepend">
-        <span class="add-on"><i class="icon-envelope"></i></span>
+
+    <span>
+        <i class="icon-envelope input-icon"></i>
         <input type="text" class="input-medium" name="username" placeholder="{% trans "Email" %}">
-    </div>
-    <div class="input-prepend">
-        <span class="add-on"><i class="icon-asterisk"></i></span>
-    <input type="password" class="input-medium" name="password" placeholder="{% trans "Password" %}">
-    </div>
+    </span>
+
+    <span>
+        <i class="icon-asterisk input-icon"></i>
+        <input type="password" class="input-medium" name="password" placeholder="{% trans "Password" %}">
+    </span>
+
     <input type="submit" value="{% trans "Login" %}">
 </form>
