--- a/templates/access/forms/register.html
+++ b/templates/access/forms/register.html
@@ -5,34 +5,31 @@
     
     <div class="control-group {% if register_form.name.errors %}error{% endif %}">
         <div class="controls">
-            <div class="input-prepend input-block-level">
-                <span class="add-on"><i class="icon-user"></i></span>
+                <i class="icon-user input-icon"></i>
                 <input
                     type="text"
                     name="name"
+                    class="input-block-level"
                     placeholder="{% trans "Name" %}"
                     value="{{ register_form.name.value|default_if_none:"" }}"
                 >
-            </div>
 
             {% for error in register_form.name.errors %}
                 <span class="help-block error">{{ error }}</span>
             {% endfor %}
         </div>
-
     </div>
 
     <div class="control-group {% if register_form.email.errors %}error{% endif %}">
         <div class="controls">
-            <div class="input-prepend input-block-level">
-                <span class="add-on"><i class="icon-envelope"></i></span>
-                <input
-                    type="text"
-                    name="email"
-                    placeholder="{% trans "Email" %}"
-                    value="{{ register_form.email.value|default_if_none:"" }}"
-                >
-            </div>
+            <i class="icon-envelope input-icon"></i>
+            <input
+                type="text"
+                name="email"
+                class="input-block-level"
+                placeholder="{% trans "Email" %}"
+                value="{{ register_form.email.value|default_if_none:"" }}"
+            >
 
             {% for error in register_form.email.errors %}
                 <span class="help-block error">{{ error }}</span>
@@ -42,14 +39,13 @@
 
     <div class="control-group {% if register_form.password1.errors %}error{% endif %}">
         <div class="controls">
-            <div class="input-prepend input-block-level">
-                <span class="add-on"><i class="icon-asterisk"></i></span>
+                <i class="icon-asterisk input-icon"></i>
                 <input
                     type="password"
                     name="password1"
+                    class="input-block-level"
                     placeholder="{% trans "Password" %}"
                 >
-            </div>
 
             {% for error in register_form.password1.errors %}
                 <span class="help-block error">{{ error }}</span>
@@ -59,14 +55,13 @@
 
     <div class="control-group {% if register_form.password2.errors %}error{% endif %}">
         <div class="controls">
-            <div class="input-prepend input-block-level">
-                <span class="add-on"><i class="icon-asterisk"></i></span>
+                <i class="icon-asterisk input-icon"></i>
                 <input
                     type="password"
                     name="password2"
+                    class="input-block-level"
                     placeholder="{% trans "Confirm password" %}"
                 >
-            </div>
 
             {% for error in register_form.password2.errors %}
                 <span class="help-block error">{{ error }}</span>
