forgot password link on register form

--- a/templates/access/forms/register.html
+++ b/templates/access/forms/register.html
@@ -74,4 +74,5 @@
     <hr>
 
     <p>{% trans "Already a user?" %} <a href="{% url "login" %}">{% trans "Sign in" %}</a></p>
+    <p><a href="{% url "password_reset_recover" %}">{% trans "Forgot your password?" %}</a></p>
 </form>
