--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7770,17 +7770,15 @@ body {
   -webkit-border-radius: 1px !important;
   -moz-border-radius: 1px !important;
   border-radius: 1px !important;
-  /*table tr td {
-		&.active,
-		&.active:hover,
-		&.active.disabled,
-		&.active.disabled:hover {
-			.buttonBackground(@btnPrimaryBackground, spin(@btnPrimaryBackground, 20));
-			color: #fff;
-			text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-		}
-    }*/
-
+}
+.datepicker td,
+.datepicker th,
+.datepicker .active,
+.datepicker .today,
+.datepicker tr > td > span {
+  -webkit-border-radius: 1px !important;
+  -moz-border-radius: 1px !important;
+  border-radius: 1px !important;
 }
 .modal-backdrop.fade.in {
   opacity: 0.3 !important;
