adding highcharts & directive

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -55,6 +55,8 @@
 
         <script src="{{lib}}angular-strap.js"></script>
         <script src="{{lib}}angular-ui-router.js"></script>
+        <script src="{{lib}}highcharts.src.js"></script>
+        <script src="{{lib}}highchart-directive.js"></script>
         <script src="{{lib}}bootstrap-datepicker.js"></script>
         <script src="{{lib}}jquery.maskMoney.js"></script>
         <script src="{{lib}}spectrum.js"></script>
