--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -54,6 +54,7 @@ body {
 @import "transaction-form.less";
 @import "category-list.less";
 @import "settings.less";
+@import "balance.less";
 
 /*
  * GLOBAL STYLES
