disabling the repeating

--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -6,7 +6,9 @@
 
 <div class="span6">
 
+    {% comment %}
     {% include "webapp/reminder-list.html" %}
+    {% endcomment %}
 
     <div class="well" ng-controller="TransactionListCtrl">
          
