--- a/templates/webapp/transaction-form.html
+++ b/templates/webapp/transaction-form.html
@@ -90,7 +90,7 @@
 
         <hr/>
 
-        <label class="checkbox">
+        <label class="checkbox" ng-show="false">
             <input type="checkbox" ng-model="isRepeat">{% trans "Repeat this transaction" %}</input>
         </label>
     </fieldset>
