custimizing tooltip via css

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -55,6 +55,7 @@ body {
 @import "category-list.less";
 @import "settings.less";
 @import "balance.less";
+@import "charts.less";
 
 /*
  * GLOBAL STYLES
