--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,33 +7,6 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
-.clearfix {
-  *zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.clearfix:after {
-  clear: both;
-}
-.hide-text {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
-.input-block-level {
-  display: block;
-  width: 100%;
-  min-height: 30px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
 article,
 aside,
 details,
@@ -6192,6 +6165,33 @@ a.badge:focus {
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+.clearfix {
+  *zoom: 1;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.clearfix:after {
+  clear: both;
+}
+.hide-text {
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+.input-block-level {
+  display: block;
+  width: 100%;
+  min-height: 30px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 @-ms-viewport {
   width: device-width;
 }
@@ -8328,6 +8328,30 @@ p.income {
 }
 p.outgo {
   color: #9d261d;
+}
+/*
+ * Trying to set the tooltip outside the chart
+.highcharts-container {
+    overflow: visible !important;
+        margin-left: 150px;
+        left: -150px;
+        position: relative;
+
+    > svg {
+        margin-left: 150px;
+        left: -150px;
+        position: relative;
+    }
+}
+*/
+.highcharts-tooltip p {
+  margin-bottom: 3px;
+}
+.highcharts-tooltip div.title {
+  font-size: 11px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 5px;
 }
 /*
  * GLOBAL STYLES
