moving chart stuff to a module

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -56,7 +56,6 @@
         <script src="{{lib}}angular-strap.js"></script>
         <script src="{{lib}}angular-ui-router.js"></script>
         <script src="{{lib}}highcharts.src.js"></script>
-        <script src="{{lib}}highchart-directive.js"></script>
         <script src="{{lib}}bootstrap-datepicker.js"></script>
         <script src="{{lib}}jquery.maskMoney.js"></script>
         <script src="{{lib}}spectrum.js"></script>
@@ -77,6 +76,7 @@
         <script src="{{controllers}}CategoryListCtrl.js"></script>
         <script src="{{controllers}}ReminderListCtrl.js"></script>
         <script src="{{app}}services.js"></script>
+        <script src="{{app}}modules/charts.js"></script>
         <script src="{{app}}directives.js"></script>
 
     {% endwith %}
