moving models around

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -75,8 +75,11 @@
         <script src="{{controllers}}TransactionListCtrl.js"></script>
         <script src="{{controllers}}CategoryListCtrl.js"></script>
         <script src="{{controllers}}ReminderListCtrl.js"></script>
+
         <script src="{{app}}services.js"></script>
         <script src="{{app}}modules/charts.js"></script>
+        <script src="{{app}}modules/models.js"></script>
+
         <script src="{{app}}directives.js"></script>
 
     {% endwith %}
